<resources>
    <string name="app_name">EcoGecko</string>

    <!-- GameUi -->
    <string name="reset_button">Reset</string>
    <string name="return_button">Menu</string>
    <string name="counter">Movements: </string>
    <string name="car">💨</string>
    <string name="wall">🧱</string>
    <string name="tiles_fill" />
    <string name="left_button">←</string>
    <string name="right_button">→</string>
    <string name="up_button">↑</string>
    <string name="down_button">↓</string>
    <string name="won">YOU WON!!!</string>

    <!-- FragmentMenu -->
    <string name="track_button">Track</string>
    <string name="play_button">Play</string>

    <!-- FragmentDifficulties -->
    <string name="dif_text">Please select the difficulty</string>
    <string name="dif_button">Menu</string>

    <!-- FragmentLevelOverview -->
    <string name="lev_text">Please select a level</string>

    <!-- TODO: check later what we need-->

    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>