<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentGame">

    <TextView
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:text="@string/right_button"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="100px"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/rewards"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="100dp"
        android:src="@mipmap/rewards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/gridview_border"
        android:numColumns="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/counter" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:background="@drawable/round_buttons"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/up_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <Button
        android:id="@+id/returnButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/return_button"
        android:background="@drawable/round_buttons"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <Button
        android:id="@+id/left_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/left_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_round_dark"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/down_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        />

    <Button
        android:id="@+id/up_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/up_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_round_dark"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/left_button" />

    <Button
        android:id="@+id/right_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/right_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_round_dark"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/down_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/down_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/down_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_round_dark"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>